# course-advisor-ai

./: LICENSE  README.md  advisor.py  app.py  chat_engine.py  explore_data.py  ingest.py  pyproject.toml  recommender.py  recommender1.py  requirements.txt  test_connection.py  utils.py
data/courses/: courses.json
data/policies/: academic_progress_and_extension_policy.md  cancellation_policy.md  enrollment_policy.md  refund_and_payment_policy.md
src/course-advisor/: app.py
src/course_advisor/: advisor.py  chat_engine.py  cli.py  ingest.py  recommender.py  test_connection.py  utils.py
src/course_advisor_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
